--- a/progress.css
+++ b/progress.css
@@ -105,8 +105,8 @@
 .switch-label {
     position: absolute;
     cursor: pointer;
-    top: 0;
-    left: 0;
+    top: -1px;
+    left: -1px;
     right: 0;
     bottom: 0;
     background-color: #edebeb;
